--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </div>
         </div>
-        <img src="./img/star.svg" alt="" class="star-nav">
+        <img src="./img/star.svg" alt="" class="star-nav d-desctop">
     </nav>
     <header class="header">
         <div class="container">
