--- a/index.html
+++ b/index.html
@@ -134,24 +134,28 @@
                         <img class="ava" src="./img/vika.png" alt="">
                         <img class="star" src="./img/star2.svg" alt="">
                     </div>
-                    <p class="item-name">Виктория Афонина </p>
-                    <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a>
+                    <div class="">
+                        <p class="item-name">Виктория Афонина </p>
+                        <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a>
+                    </div>
                 </div>
                 <div class="third-item">
                     <div class="item-ava">
                         <img class="ava" src="./img/poli.png" alt="">
                         <img class="star" src="./img/star2.svg" alt="">
                     </div>
+                    <div>
                     <p class="item-name">Полина Варпулева </p>
-                    <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a>
+                    <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a></div>
                 </div>
                 <div class="third-item">
                     <div class="item-ava">
                         <img class="ava" src="./img/roma.png" alt="">
                         <img class="star" src="./img/star2.svg" alt="">
                     </div>
+                    <div>
                     <p class="item-name">Роман Абдурахимов </p>
-                    <a href="https://f2fst.ru/" target="_blank" class="item-link">Face 2 Face</a>
+                    <a href="https://f2fst.ru/" target="_blank" class="item-link">Face 2 Face</a></div>
                 </div>
             </div>
         </div>
