--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <button class="btn btn-header" id="myBtn" onclick="openModal('myModal')">Принять участие</button>
             </div>
         </div>
+        <img class="d-mobile header-dj" src="./img/dj.svg" alt="">
     </header>
     <section class="second">
         <div class="container">
