--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 </head>
 
 <body>
+    <div id="myModalFinish" class="modal">
+        <div class="modal-section modal-section-thank">
+            <div class="close" onclick="closeModal()"></div>
+            <div class="form-content">
+              <div class="heart">
+                <svg width="66" height="60" viewBox="0 0 66 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M65.7473 17.3571C65.7598 13.3472 64.3968 9.45735 61.8914 6.35256C59.386 3.24778 55.8938 1.12083 52.0116 0.335282C48.1295 -0.450263 44.0985 0.154375 40.6078 2.04584C37.117 3.93731 34.3832 6.99816 32.8737 10.7052C31.3642 6.99816 28.6304 3.93731 25.1396 2.04584C21.6489 0.154375 17.6179 -0.450263 13.7358 0.335282C9.85364 1.12083 6.3614 3.24778 3.85602 6.35256C1.35063 9.45735 -0.012345 13.3472 8.42627e-05 17.3571C8.42627e-05 17.607 8.42627e-05 17.857 8.42627e-05 18.1261C8.42627e-05 44.5032 32.8737 59.4605 32.8737 59.4605C32.8737 59.4605 65.7473 44.5032 65.7473 18.1261C65.7473 17.8762 65.7473 17.6263 65.7473 17.3571Z" fill="#FF7323"/>
+                    </svg>                    
+              </div>
+              <div class="modal-thanks">
+                Спасибо за интерес <br/>к прямому эфиру
+              </div>
+              <p class="modal-sucsess">Ваша заявка отправлена</p>
+            </div>
+        </div>
+    </div>
     <div id="myModal" class="modal">
         <div class="modal-section modal-center modal-form-wrapper">
             <div class="close" onclick="closeModal()"></div>
@@ -42,20 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-section modal-section-thank">
-            <div class="close" onclick="closeModal()"></div>
-            <div class="form-content">
-              <div class="heart">
-                <svg width="66" height="60" viewBox="0 0 66 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M65.7473 17.3571C65.7598 13.3472 64.3968 9.45735 61.8914 6.35256C59.386 3.24778 55.8938 1.12083 52.0116 0.335282C48.1295 -0.450263 44.0985 0.154375 40.6078 2.04584C37.117 3.93731 34.3832 6.99816 32.8737 10.7052C31.3642 6.99816 28.6304 3.93731 25.1396 2.04584C21.6489 0.154375 17.6179 -0.450263 13.7358 0.335282C9.85364 1.12083 6.3614 3.24778 3.85602 6.35256C1.35063 9.45735 -0.012345 13.3472 8.42627e-05 17.3571C8.42627e-05 17.607 8.42627e-05 17.857 8.42627e-05 18.1261C8.42627e-05 44.5032 32.8737 59.4605 32.8737 59.4605C32.8737 59.4605 65.7473 44.5032 65.7473 18.1261C65.7473 17.8762 65.7473 17.6263 65.7473 17.3571Z" fill="#FF7323"/>
-                    </svg>                    
-              </div>
-              <div class="modal-thanks">
-                Спасибо за интерес <br/>к прямому эфиру
-              </div>
-              <p class="modal-sucsess">Ваша заявка отправлена</p>
-            </div>
-        </div>
+      
     </div>
     <nav class="nav">
         <div class="container">
@@ -289,8 +292,6 @@
                 const formData = new FormData(form);
                 // in prod use ./submit_request.php to fetch
                 // var abc = $("#ahead_form_btn").html("&#10003;").text();
-                var abc = document.querySelector('.modal-form-wrapper').classList.add("transitOff");
-                var abc = document.querySelector('.modal-section-thank').classList.add("transitOn");
                 
                 openModal('myModalFinish')
                 $("#ahead_form_btn").val(abc);
