--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="myModalFinish" class="modal">
-        <div class="modal-section modal-center modal-section-thank">
+        <div class="modal-section  modal-section-thank">
             <div class="close" onclick="closeModal()"></div>
             <div class="form-content">
                 <div class="heart">
@@ -88,8 +88,8 @@
                 </h1>
                 <div class="header-btn-container">
                     <button class="btn btn-header" id="myBtn" onclick="openModal('myModal')">Принять участие</button>
-                    <img class="lineshort" src="./img/lineshort.svg" alt="">
-                    <img class="header-heart" src="./img/heart.svg" alt="">
+                    <img class="lineshort d-desctop" src="./img/lineshort.svg" alt="">
+                    <img class="header-heart d-desctop" src="./img/heart.svg" alt="">
                 </div>
             </div>
             <img class="d-desctop header-dj-main" src="./img/dj.svg" alt="">
@@ -98,7 +98,7 @@
     </header>
     <section class="second">
         <div class="container second-wrapper">
-            <div class="arrows second-arrows">
+            <div class="arrows second-arrows d-desctop">
                 <img src="./img/icon/arrow_right.svg" alt="arrow_right">
                 <img src="./img/icon/arrow_right.svg" alt="arrow_right">
             </div>
@@ -153,7 +153,7 @@
         <div class="container">
             <h1 class="main-title third-title">
                 Кто в эфире
-                <img src="./img/linelong.svg" alt="">
+                <img src="./img/linelong.svg" alt="" class="d-desctop">
             </h1>
             <div class="third-list">
                 <div class="third-item">
@@ -214,7 +214,7 @@
                                     target="_blank"><span>политикой обработки персональных данных</span></a>.</p>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="btn" type="submit" id="form_btn_submit">Записаться</button>
+                            <button class="btn" disabled="disabled" type="submit" id="form_btn_submit">Записаться</button>
                         </div>
                     </form>
 
