--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
                 <img src="./img/icon/arrow_right.svg" alt="arrow_right">
                 <img src="./img/icon/arrow_right.svg" alt="arrow_right">
             </div>
-            <h1 class="main-title">
+            <h1 class="main-title second-title">
                 О чем говорим
+                <img src="./img/heart.svg" class="d-mobile second-heart" alt="">
             </h1>
             <div class="second-list">
                 <div class="second-item">
@@ -148,6 +149,7 @@
                 </div>
             </div>
         </div>
+        <div class="orangestar d-mobile"><img src="./img/starorange.svg" alt=""></div>
     </section>
     <section class="third">
         <div class="container">
@@ -203,7 +205,7 @@
                     <form action="" method="post" id="form_aso" name="formAso" onsubmit="return sendRequest(event)"
                         class="modal-form">
                         <input type="name" name="name" placeholder="Имя Фамилия *" class="input-field must" required>
-                        <input type="text" name="request" placeholder="Компания *" class="input-field" required>
+                        <input type="text" name="company" placeholder="Компания *" class="input-field must" required>
                         <input type="email" name="email" placeholder="E-mail *" class="input-field must" required>
                         <div>
                             <p class="modal-helper"><span>*</span> — поля, обязательные для заполнения</p>
