--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                     </div>
                     <div class="">
                         <p class="item-name">Виктория Афонина </p>
+                        <p class="item-work">менеджер спецпроектов</p>
                         <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a>
                     </div>
                 </div>
@@ -175,6 +176,7 @@
                     </div>
                     <div>
                         <p class="item-name">Полина Варпулева </p>
+                        <p class="item-work">руководитель отдела аудиорекламы</p>
                         <a href="https://goahead.ai/" target="_blank" class="item-link">Go Ahead</a>
                     </div>
                 </div>
@@ -185,6 +187,7 @@
                     </div>
                     <div>
                         <p class="item-name">Роман Абдурахимов </p>
+                        <p class="item-work">совладелец студии</p>
                         <a href="https://f2fst.ru/" target="_blank" class="item-link">Face 2 Face</a>
                     </div>
                 </div>
